[package]
name = "uxterm"
version = "0.1.0"
edition = "2021"
authors = ["pjdur"]
description = "A user experience-focused terminal UI library built with Crossterm."
license = "MIT"
repository = "https://github.com/pjdur/uxterm"
readme = "README.md"
keywords = ["tui", "terminal", "ui", "crossterm", "ux"]
categories = ["command-line-utilities", "gui", "development-tools"]
homepage = "https://github.com/pjdur/uxterm"
documentation = "https://docs.rs/uxterm"

[dependencies]
crossterm = "0.27"
